--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ input:hover{
 .name1{
  display: inline-block;
  text-align: center;
- margin-top: 100px;
+ margin-top: 110px;
  font-size: 28px;
  padding-bottom: 0;
  margin-bottom: 0;
@@ -82,7 +82,8 @@ font-weight: bold;
 }
 .date{
   font-size: 20px;
-  margin-top: 90px;
+  margin-top: 80px;
+  padding-top: 0;
   margin-bottom: 0;
   padding-bottom: 0;
   text-align: center;
